--- a/bootstrap-3.3.7-dist/learn.html
+++ b/bootstrap-3.3.7-dist/learn.html
@@ -40,11 +40,15 @@
                     <a href ="learn.html" class ="dropdown-toggle" data-toggle="dropdown">Learn
                     <b class = "caret"></b>
                     <ul class= "dropdown-menu">
-                      <li class = "dropdown-header">Examples</li>
-                      <li><a href = "#">C++</a></li>
-                      <li><a href = "#">Java</a></li>
-                    </ul>
-                </li>
+                      <li class="dropdown-header">Examples</li>
+                <li><a href="learn.html">C++</a></li>
+                <li><a href="glyphicons.html">Java</a></li>
+                </ul>
+                 </li>   
+               <li ><a href="panels.html">Panels</a></li>  
+                <li ><a href="alerts.html">Alerts and Wells</a></li>  
+                 <li ><a href="badges.html">Badges and Labels</a></li>  
+                  <li ><a href="popup.html">Modal Box/Popup</a></li>      
               </ul>  
             </div>
         </div>
